--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   </head>
 
   <body>
-    <header class="header">
+    <!-- 
+      <header class="header">
       <div class="container header__container">
         <a href="./index.html" class="logo logo__header--accent">
           <span class="logo__web">Web</span>Studio
@@ -44,7 +45,7 @@
           </ul>
         </nav>
 
-        <!-- Contacts -->
+       
 
         <ul class="contacts__list">
           <li class="contacts__item">
@@ -67,11 +68,12 @@
           </li>
         </ul>
       </div>
-    </header>
-
-    <!-- Hero -->
+    </header> 
+   -->
 
     <main>
+      <!-- Hero -->
+
       <section class="hero">
         <div class="container">
           <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
@@ -80,7 +82,7 @@
           </button>
         </div>
 
-        <!-- Backdrop modal -->
+        <!--  modal -->
 
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
@@ -462,6 +464,7 @@
       </section>
 
       <!-- Customers -->
+
       <section class="section">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
@@ -514,11 +517,11 @@
       </section>
     </main>
 
-    <!-- Fooootter -->
+    <!-- Fooootter  -->
 
     <footer class="footer__container">
       <div class="container footer__container_box">
-        <div>
+        <div class="footer__box">
           <a href="./index.html" class="logo logo__footer--accent"
             ><span class="logo__web">Web</span>Studio</a
           >
@@ -548,7 +551,7 @@
           </address>
         </div>
 
-        <div class="social__container">
+        <div class="footer__box social__container">
           <p class="social__container_text">присоединяйтесь</p>
           <ul class="social-footer__list">
             <li class="social-footer__item">
@@ -581,8 +584,6 @@
             </li>
           </ul>
         </div>
-
-        <!-- Subscription -->
 
         <div class="subscription">
           <p class="subscription__text">Подпишитесь на рассылку</p>
