--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <a href="./index.html" class="logo logo__header--accent">
           <span class="logo__web">Web</span>Studio
@@ -45,7 +45,7 @@
           </ul>
         </nav>
 
-        <!-- Contacts -->
+       
 
         <ul class="contacts__list">
           <li class="contacts__item">
@@ -68,7 +68,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <section class="section">
         <div class="container">
@@ -292,7 +292,7 @@
 
     <footer class="footer__container">
       <div class="container footer__container_box">
-        <div>
+        <div class="footer__box">
           <a href="./index.html" class="logo logo__footer--accent"
             ><span class="logo__web">Web</span>Studio</a
           >
@@ -322,7 +322,7 @@
           </address>
         </div>
 
-        <div class="social__container">
+        <div class="footer__box social__container">
           <p class="social__container_text">присоединяйтесь</p>
           <ul class="social-footer__list">
             <li class="social-footer__item">
@@ -355,8 +355,6 @@
             </li>
           </ul>
         </div>
-
-        <!-- Subscription -->
 
         <div class="subscription">
           <p class="subscription__text">Подпишитесь на рассылку</p>
