--- a/portfolio.html
+++ b/portfolio.html
@@ -115,44 +115,46 @@
             </ul>
           </nav>
 
-          <ul class="menu__list_contacts">
-            <li class="menu__item_contacts">
-              <a
-                href="tel:+380961111111"
-                class="menu__link_tel menu__link_contacts"
-              >
-                +38 096 111 11 11</a
-              >
-            </li>
-            <li class="menu__item_contacts">
-              <a
-                href="mailto:info@devstudio.com"
-                class="menu__link menu__link_contacts menu__link_mail"
-              >
-                info@devstudio.com</a
-              >
-            </li>
-          </ul>
-          <ul class="menu__list_social">
-            <li class="menu__item_social">
-              <a href="" class="menu__link menu__link_social"
-                >Instagram<span class="menu__link_social--border"></span
-              ></a>
-            </li>
-            <li class="menu__item_social">
-              <a href="" class="menu__link menu__link_social"
-                >Twitter<span class="menu__link_social--border"></span
-              ></a>
-            </li>
-            <li class="menu__item_social">
-              <a href="" class="menu__link menu__link_social"
-                >Facebook<span class="menu__link_social--border"></span
-              ></a>
-            </li>
-            <li class="menu__item_social">
-              <a href="" class="menu__link menu__link_social">Linkedin</a>
-            </li>
-          </ul>
+          <div>
+            <ul class="menu__list_contacts">
+              <li class="menu__item_contacts">
+                <a
+                  href="tel:+380961111111"
+                  class="menu__link_tel menu__link_contacts"
+                >
+                  +38 096 111 11 11</a
+                >
+              </li>
+              <li class="menu__item_contacts">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="menu__link menu__link_contacts menu__link_mail"
+                >
+                  info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="menu__list_social">
+              <li class="menu__item_social">
+                <a href="" class="menu__link menu__link_social"
+                  >Instagram<span class="menu__link_social--border"></span
+                ></a>
+              </li>
+              <li class="menu__item_social">
+                <a href="" class="menu__link menu__link_social"
+                  >Twitter<span class="menu__link_social--border"></span
+                ></a>
+              </li>
+              <li class="menu__item_social">
+                <a href="" class="menu__link menu__link_social"
+                  >Facebook<span class="menu__link_social--border"></span
+                ></a>
+              </li>
+              <li class="menu__item_social">
+                <a href="" class="menu__link menu__link_social">Linkedin</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
