--- a/portfolio.html
+++ b/portfolio.html
@@ -96,16 +96,14 @@
           <nav>
             <ul class="menu__list_navigation">
               <li class="menu__item_navigation">
-                <a
-                  href="./index.html"
-                  class="menu__link menu__link_navigation menu__link_navigation--current"
+                <a href="./index.html" class="menu__link menu__link_navigation"
                   >Студия</a
                 >
               </li>
               <li class="menu__item_navigation">
                 <a
                   href="./portfolio.html"
-                  class="menu__link menu__link_navigation"
+                  class="menu__link menu__link_navigation menu__link_navigation--current"
                   >Портфолио</a
                 >
               </li>
